2007-09-28  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Updated to test List attributes
	* src/core/tests/zelda: Add a new list attribute
	* src/core/include/attributehandlerregistry.h: Add list.h
	* src/core/include/list.h: New attribute of type list. This can hold a list
	of attributes IAttribute
	* src/core/src/attributehandlerregistry.cpp: Associate by default list
	attributes to nodes of type "list"
	* src/core/src/list.cpp: New attribute of type list. This can hold a list
	of attributes IAttribute
	* src/core/Makefile: Makefile updated for target testpo so it can use the
	new List attribute

2007-09-26  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Updated to test Double attributes
	* src/core/tests/zelda: Add a new Double attribute
	* src/core/include/attributehandlerregistry.h: Add double.h
	* src/core/include/scalar.h: Replace sstream by boost::lexical_cast for
	lexical conversions
	* src/core/include/string.h: Fix a comment
	* src/core/include/double.h: New attribute of type double
	* src/core/src/attributehandlerregistry.cpp: Associate by default double
	attributes to nodes of type "double"

2007-09-26  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Updated to test String attributes
	* src/core/tests/zelda: Add a new String attribute
	* src/core/include/attributehandlerregistry.h: Add string.h header
	* src/core/include/scalar.h: Add a setter for the value hold
	* src/core/include/string.h: New attribute of type string
	* src/core/src/attributehandlerregistry.cpp: Associate by default string
	attributes to nodes of type "string"

2007-09-25  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Update example
	* src/core/tests/zelda: Fix attribute type ("scalar" -> "float")
	* src/core/include/attributehandlerregistry.h:  Add float.h; Replace namespace Viracocha by Gnoll
	* src/core/include/filestream.h: Replace namespace Viracocha by Gnoll